Fix extra margin in alert boxes
Paragraphs in alert boxes have their bottom margins removed, while the
top margins remain to keep consistent spacing between paragraphs. This
removes the top margin of the first paragraph only if it is the first
child of the alert box.

--- a/layouts/partials/css/inline/page.css
+++ b/layouts/partials/css/inline/page.css
@@ -192,6 +192,8 @@ main header a:hover, main header a:active, main header a:focus {
 
 .alert p { margin-bottom: 0; }
 
+.alert p:first-child { margin-top: 0; }
+
 /* Sidebar */
 
 aside {
